test/force-app/main/default/objects/Diligence_Item__c/Diligence_Item__c.object-meta.xml
<CustomObject>
    <description>Relevant diligence item to a particular property</description>
    <label>Diligence Item</label>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>Diligence Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Diligence Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>