test/force-app/main/default/objects/Diligence_Item__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <inlineHelpText>Provide comments pertaining to the diligence item</inlineHelpText>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>