test/force-app/main/default/objects/Diligence_Item__c/fields/Diligence_Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Diligence_Item_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Diligence Item Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Development_Item__c.Type__c</field>
            <operation>equals</operation>
            <value>Diligence Item</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Development_Item__c</referenceTo>
    <relationshipLabel>Diligence Items</relationshipLabel>
    <relationshipName>Diligence_Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>