test/force-app/main/default/objects/Diligence_Item__c/fields/Legal_Support_Needed__c.field-meta.xml
<CustomField>
    <fullName>Legal_Support_Needed__c</fullName>
    <inlineHelpText>Do you need legal support to address this diligence item?</inlineHelpText>
    <label>Legal Support Needed</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>