test/force-app/main/default/objects/Diligence_Item__c/fields/Viability_Impact__c.field-meta.xml
<CustomField>
    <fullName>Viability_Impact__c</fullName>
    <description>Impact on project viability</description>
    <inlineHelpText>Impact on project viability</inlineHelpText>
    <label>Viability Impact</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>