test/force-app/main/default/objects/Diligence_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Diligence_Item_Type__c</columns>
    <columns>Viability_Impact__c</columns>
    <columns>Legal_Support_Needed__c</columns>
    <columns>Comments__c</columns>
    <columns>NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>